2011-07-28  MIYAMUKO Katsuyuki

	* dispatcher.l (xhr-event-dispatch): やっぱり、発生したエラーは
	ダイアログじゃなくてメッセージ領域と *Trace Output* で通知するようにした

	* dispatcher.l (dispatch-later): *request-queue* に値が入った状態で
	ダンプした場合でも、イベントディスパッチタイマーが動くようにした (#1)
	https://github.com/miyamuko/xml-http-request/issues/1

2010-10-06  MIYAMUKO Katsuyuki

	* dispatcher.l (xhr-event-dispatch): リクエストした順にコールバック
	を呼ぶようにした

	* readystate.l (xhr-request-waiting-p): リクエスト中なら t を返す

	* readystate.l (xhr-request-aborted-p): リクエストをアボートしたなら t を返す

2010-09-29  MIYAMUKO Katsuyuki

	* readystate.l (xhr-request-complete-p): リクエストが完了したか
	どうかを返す関数を export

2010-08-16  MIYAMUKO Katsuyuki

	* dispatcher.l (xhr-event-dispatch): 非同期 API のイベントハンドラ内で
	発生したエラーはダイアログで通知するようにした。

	* WinHttpRequest は readyState を実装していないので
	WaitForResponse で通信の完了を検出するようにした。
	http://msdn.microsoft.com/en-us/library/aa384064(v=VS.85).aspx

	* request.l (xhr-abort): まったく動作していなかったのを直した

2010-08-06  MIYAMUKO Katsuyuki

	* debug.l (xhr-trace-method, puts-basicauth): WinHTTP の setCredentials を
	デバッグログに記録するようにした

	* request.l (xhr-open): WinHTTP オブジェクトの Basic 認証に対応

	* ole.l (xmlhttp-winhttp-p): ServerXMLHTTP はインターフェイスは 
	XMLHTTP と同じだが中身は WinHTTP。
	中身が winhttp かどうかだけで判断するのは中途半端なので削除。

	* ole.l (%set-credentials): IWinHttpRequest::SetCredentials のラッパー
	http://msdn.microsoft.com/en-us/library/aa384058(VS.85).aspx

2010-07-29  MIYAMUKO Katsuyuki

	* debug.l, request.l, dispatcher.l: 作成した COM オブジェクトの ProgId と
	レスポンスの内容をトレースログに出力するようにした。
	Usage:
	  M-x load-library で xml-http-request/debug を読み込み
	  M-x xhr::enable-trace でトレースログ有効化
	  M-x xhr::disable-trace でトレースログ無効化
	リクエストヘッダは勝手に追加されるものがあるので、実際に送信される
	リクエストとは違う場合があるので注意。

	* バージョンを 1.3.0 に更新

2010-07-28  MIYAMUKO Katsuyuki

	* (xhr-get, xhr-head, xhr-post, xhr-request,
	   xhr-get-async, xhr-head-async, xhr-post-async, xhr-request-async,
	   with-xhr-get-async, with-xhr-head-async, with-xhr-post-async, with-xhr-request-async):
	   progid 引数を指定できるようにした。

	* (create-xmlhttp): progid 引数によって作成する XMLHTTP オブジェクトを