@@ -1,3 +1,7 @@
+2011-11-20  MIYAMUKO Katsuyuki
+
+	* dispatcher.l (process-error): メッセージ領域に通知するエラーメッセージを改善
+
 2011-07-28  MIYAMUKO Katsuyuki
 
 	* dispatcher.l (xhr-event-dispatch): やっぱり、発生したエラーは
@@ -39,7 +43,7 @@
 
 	* request.l (xhr-open): WinHTTP オブジェクトの Basic 認証に対応
 
-	* ole.l (xmlhttp-winhttp-p): ServerXMLHTTP はインターフェイスは 
+	* ole.l (xmlhttp-winhttp-p): ServerXMLHTTP はインターフェイスは
 	XMLHTTP と同じだが中身は WinHTTP。
 	中身が winhttp かどうかだけで判断するのは中途半端なので削除。
 
